Fix alignment of profile pictures... again

--- a/app/assets/stylesheets/pages/weclome.css.scss
+++ b/app/assets/stylesheets/pages/weclome.css.scss
@@ -30,7 +30,7 @@ section {
 
 .profile {
   @include span-columns(4 of 12);
-  &:nth-child(3) {
+  &:nth-child(3n+1) {
     @include omega;
   }
 
